# shersh_gtest_template

./: .travis.yml  CMakeLists.txt  README.md  run_tests.sh  travis_build.sh
ext/gtest/: CMakeLists.txt  Makefile  cmake_install.cmake
ext/gtest/src/googletest-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ext/gtest/src/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ext/gtest/src/googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ext/gtest/tmp/: googletest-cfgcmd.txt  googletest-gitclone.cmake  googletest-gitupdate.cmake
ext/sample/: sample.cpp  sample.h  sample_test.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt
